[package]
name = "dota"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
device_query = "2.1.0"
enigo = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
clipboard = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.3", features = ["derive"] }
